# vibe-torrent-client

./: .gitignore  README.md  README_CLIENT.md  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: ci.yml
src/: cli.py  client.py  file_manager.py  magnet.py  magnet_client.py  mcp_server.py  peer.py  piece_manager.py  torrent_parser.py  tracker.py  tui.py
src/mcp_server/: __init__.py  models.py  resources.py  server.py  state.py  utils.py
src/mcp_server/tools/: __init__.py  download_tools.py  file_tools.py  torrent_tools.py
src/tui/: __init__.py  constants.py  formatters.py  log_handler.py  tui.py
tests/: test_magnet.py  test_torrent_parser.py
