[project]
name = "torrent-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "fastmcp>=2.0.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "pytest>=9.0.2",
    "ruff>=0.9.3",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]
